# routes/transactionsRouter.js
@@ -4,6 +4,7 @@ import express from "express";
 import globalTryCatchHandler from "../controllers/errorControllers.js";
 import {
   createTransactions,
+  deleteTransactionById,
   getAllTransactions,
 } from "../controllers/TransactionsControllers.js";
 import { authorizationHandler } from "../middleware/authorization.js";
@@ -22,5 +23,8 @@ router.post(
   authorizationHandler,
   globalTryCatchHandler(createTransactions)
 );
+// http://localhost:5656/api/transactions/:transactionId
+
+router.delete('/:transactionId', authorizationHandler, globalTryCatchHandler(deleteTransactionById))
 
 export default router;
